+ 로그에 대해

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#hello.springmvc ???? ? ?? ?? ?? ??
+#logging.level.hello.springmvc=trace
+# logging.level.hello.springmvc=debug    ????
+#??? ????
+logging.level.hello.springmvc=info
 
+#?? ?? ?? ??(?? info)
+#logging.level.root=info
